added custom footer

--- a/styles/global.css
+++ b/styles/global.css
@@ -34,6 +34,7 @@ main {
     padding: 20px;
 }
 
+/* css below for ball from https://codepen.io/finnhvman/pen/wrLPJz */
 .toy {
     position: relative;
     width: 90vmin;
