--- a/styles/global.css
+++ b/styles/global.css
@@ -252,3 +252,13 @@ form:valid ~ .instruction {
         opacity: 1;
     }
 }
+
+footer {
+    position: sticky;
+    bottom: 0;
+    padding: 7px 20px;
+    font-size: 0.8em;
+    display: flex;
+    justify-content: flex-end;
+    background-color: var(--footer-background);
+}
