--- a/styles/global.css
+++ b/styles/global.css
@@ -34,6 +34,45 @@ main {
     padding: 20px;
 }
 
+section {
+    margin: 0 auto;
+    width: max-content;
+    text-align: center;
+    display: grid;
+    grid-template-rows: 0.05fr 1fr;
+    background: white;
+    border: 1px solid black;
+}
+
+#question-section {
+    justify-items: center;
+    gap: 10px;
+}
+
+textarea {
+    width: 250px;
+    height: 100px;
+    resize: vertical;
+}
+
+.hidden {
+    display: none;
+}
+
+#answer-section {
+    padding: 1px;
+}
+
+#answer-display {
+    grid-row: 2;
+    grid-column: 1;
+    margin-left: 0.7em;
+    color: white;
+    text-shadow: 3px 3px 4px black;
+    font-size: 1.25em;
+    z-index: 100;
+}
+
 /* css below for ball from https://codepen.io/finnhvman/pen/wrLPJz */
 .toy {
     position: relative;
