added event listeners for submit button, hidden class, and shake and fade animations for ball

--- a/styles/global.css
+++ b/styles/global.css
@@ -301,3 +301,52 @@ footer {
     justify-content: flex-end;
     background-color: var(--footer-background);
 }
+
+p {
+    margin: 5px;
+}
+
+.shake {
+    animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+    transform: translate(0, 0);
+}
+
+.fade-in {
+    animation: fade-in 0.82s ease-out both;
+    opacity: 0;
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes shake {
+    10%,
+    90% {
+        transform: translate(-1px, 0);
+    }
+
+    20%,
+    80% {
+        transform: translate(2px, 0);
+    }
+
+    30%,
+    50%,
+    70% {
+        transform: translate(-4px, 0);
+    }
+
+    40%,
+    60% {
+        transform: translate(4px, 0);
+    }
+}
